...
                        }) {
                            Icon(Icons.Default.Inventory2, contentDescription = stringResource(R.string.conversations_archived_content_description))
                        }
                    }
                    IconButton(
                        onClick = dropUnlessResumed { onOpenProfile() },
                        modifier = Modifier.testTag("conversation_list_profile_button"),
                    ) {
                        Icon(
                            Icons.Default.Person,
                            contentDescription = stringResource(R.string.conversations_profile_content_description),
                            modifier = Modifier
                                .size(28.dp)
...
            ) {
                SmallFloatingActionButton(
                    onClick = dropUnlessResumed { onNewGroup() },
                    shape = MaterialTheme.shapes.small,
                    containerColor = MaterialTheme.colorScheme.secondaryContainer,
                    contentColor = MaterialTheme.colorScheme.onSecondaryContainer,
                    modifier = Modifier.testTag("conversation_list_new_group_fab"),
                ) {
                    Icon(Icons.Default.Group, contentDescription = stringResource(R.string.conversations_new_group_content_description))
                }
                FloatingActionButton(
                    onClick = dropUnlessResumed { onNewChat() },
                    shape = MaterialTheme.shapes.small,
...
